# Hextral

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
checkpoints/: README.md
checkpoints/experiments/: .gitkeep
examples/: async_demo.rs  batch_optimization_demo.rs  config_builder_demo.rs  csv_dataset_demo.rs  early_stopping_demo.rs  image_dataset_demo.rs  optimizer_demo.rs  quaternion_demo.rs
src/: activation.rs  batch.rs  configuration.rs  error.rs  lib.rs  memory.rs  monitoring.rs  optimizer.rs  tests.rs
src/dataset/: csv.rs  image.rs  mod.rs  preprocessing.rs
tests/: config_tests.rs  optimizer_tests.rs  tests.rs
