[package]
name = "hextral"
version = "0.8.0"
authors = ["xStFtx <noskillz.exe@gmail.com>"]
description = "Comprehensive neural network library with dataset loading, batch normalization, 9 activation functions, 5 loss functions, multiple optimizers, regularization, and clean async-first API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xStFtx/hextral"
keywords = ["neural-network", "machine-learning", "deep-learning", "ai", "async"]
categories = ["algorithms", "mathematics", "science", "asynchronous"]
edition = "2021"
readme = "README.md"

[dependencies]
nalgebra = "0.33"
rand = { version = "0.8", features = ["std_rng"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bincode = "1.3"

# Dataset loading dependencies
csv = { version = "1.3", optional = true }
image = { version = "0.24", optional = true }
tokio-util = { version = "0.7", features = ["codec", "io"], optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["serde", "datasets"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
datasets = ["csv", "image", "tokio-util", "async-trait", "thiserror"]

[lib]
name = "hextral"
