[package]
name = "hextral"
version = "0.9.0"
authors = ["xStFtx <noskillz.exe@gmail.com>"]
description = "Comprehensive neural network library with dataset loading, batch normalization, 9 activation functions, 5 loss functions, multiple optimizers, regularization, and clean async-first API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xStFtx/hextral"
keywords = ["neural-network", "machine-learning", "deep-learning", "ai", "async"]
categories = ["algorithms", "mathematics", "science", "asynchronous"]
edition = "2021"
readme = "README.md"

[dependencies]
nalgebra = "0.33"
rand = { version = "0.8", features = ["std_rng"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bincode = "1.3"

# Production monitoring and logging
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }
serde_yaml = { version = "0.9", optional = true }
serde_json = "1.0"

# Memory and performance optimization
memmap2 = { version = "0.9", optional = true }
rayon = { version = "1.7", optional = true }
uuid = { version = "1.0", features = ["serde"], optional = true }

# Configuration management
config = { version = "0.13", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

# Model versioning and serialization
onnx = { version = "0.1", optional = true }
tch = { version = "0.13", optional = true }
semver = { version = "1.0", optional = true }

# Testing infrastructure  
proptest = { version = "1.0", optional = true }
criterion = { version = "0.5", optional = true }

# Dataset loading dependencies
csv = { version = "1.3", optional = true }
image = { version = "0.24", optional = true }
tokio-util = { version = "0.7", features = ["codec", "io"], optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = "0.5"

[features]
default = ["serde", "datasets"]
serde = ["dep:serde", "nalgebra/serde-serialize"]
datasets = ["csv", "image", "tokio-util", "async-trait", "thiserror"]
monitoring = ["tracing", "tracing-subscriber", "metrics", "metrics-exporter-prometheus"]
config = ["dep:config", "serde_yaml", "toml", "clap"]
versioning = ["onnx", "semver", "uuid"]
testing = ["proptest", "criterion"]
performance = ["memmap2", "rayon"]
full = ["datasets", "monitoring", "config", "versioning", "testing", "performance", "uuid"]

[lib]
name = "hextral"
